--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
+    "postgres": "^3.4.7",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3"
   }
